--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Odux Art</title>
+    <link rel="icon" type="image/png" href="https://iili.io/FP5Ro2p.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -13,7 +14,9 @@
     <!-- Navbar (same as index.html) -->
     <nav class="bg-white shadow-sm">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-black">Odux Art</a>
+            <a href="index.html" class="flex items-center">
+                <img src="https://iili.io/FP5RC4R.png" alt="Odux Art Logo" class="h-10">
+            </a>
             <div class="space-x-4 hidden md:block">
                 <a href="index.html" class="text-black hover:text-gray-600">Home</a>
                 <a href="products.html" class="text-black hover:text-gray-600">Products</a>
@@ -141,14 +144,30 @@
         </div>
     </section>
 
-    <!-- Footer (same as index.html) -->
-    <footer class="bg-black text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <div class="flex justify-center space-x-4 mb-4">
-                <a href="https://wa.me/9072270271" target="_blank" class="hover:text-green-500">WhatsApp</a>
-                <a href="https://instagram.com/odux.art" target="_blank" class="hover:text-pink-500">Instagram</a>
+    <!-- Footer -->
+    <footer class="bg-black text-white py-12">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-col items-center justify-center">
+                <!-- Logo -->
+                <div class="mb-6">
+                    <img src="https://iili.io/FP5RC4R.png" alt="Odux Art Logo" class="h-16">
+                </div>
+                
+                <!-- Social Links -->
+                <div class="flex space-x-6 mb-6">
+                    <a href="https://wa.me/919072270271" target="_blank" class="text-white hover:text-green-500 transition-colors">
+                        <span class="sr-only">WhatsApp</span>
+                        <i class="fab fa-whatsapp text-2xl"></i>
+                    </a>
+                    <a href="https://instagram.com/odux.art" target="_blank" class="text-white hover:text-pink-500 transition-colors">
+                        <span class="sr-only">Instagram</span>
+                        <i class="fab fa-instagram text-2xl"></i>
+                    </a>
+                </div>
+                
+                <!-- Copyright -->
+                <p class="text-gray-400 text-sm">&copy; 2025 Odux Art. All rights reserved.</p>
             </div>
-            <p>&copy; 2025 Odux Art. All rights reserved.</p>
         </div>
     </footer>
 
