--- a/custom-order.html
+++ b/custom-order.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Order - Odux Art</title>
+    <link rel="icon" type="image/png" href="https://iili.io/FP5Ro2p.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body class="bg-white text-black">
-    <!-- Navbar (same as index.html) -->
-    <nav class="bg-white shadow-sm">
+    <!-- Navbar -->
+    <nav class="bg-white shadow-sm fixed w-full z-50 top-0">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-black">Odux Art</a>
+            <a href="index.html" class="flex items-center">
+                <img src="https://iili.io/FP5RC4R.png" alt="Odux Art Logo" class="h-10">
+            </a>
             <div class="space-x-4 hidden md:block">
                 <a href="index.html" class="text-black hover:text-gray-600">Home</a>
-                <a href="products.html" class="text-black hover:text-gray-600">Products</a>
-                <a href="custom-order.html" class="text-black hover:text-gray-600">Custom Order</a>
+                <a href="index.html" class="text-black hover:text-gray-600">Products</a>
+                <a href="custom-order.html" class="text-black hover:text-gray-600 font-semibold">Custom Order</a>
                 <a href="contact.html" class="text-black hover:text-gray-600">Contact</a>
             </div>
             <button id="mobile-menu-toggle" class="md:hidden">
@@ -28,12 +32,15 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white">
             <div class="px-4 pt-2 pb-3 space-y-1">
                 <a href="index.html" class="block text-black hover:bg-gray-100 py-2">Home</a>
-                <a href="products.html" class="block text-black hover:bg-gray-100 py-2">Products</a>
-                <a href="custom-order.html" class="block text-black hover:bg-gray-100 py-2">Custom Order</a>
+                <a href="index.html" class="block text-black hover:bg-gray-100 py-2">Products</a>
+                <a href="custom-order.html" class="block text-black hover:bg-gray-100 py-2 font-semibold">Custom Order</a>
                 <a href="contact.html" class="block text-black hover:bg-gray-100 py-2">Contact</a>
             </div>
         </div>
     </nav>
+
+    <!-- Padding to account for fixed navbar -->
+    <div class="pt-20"></div>
 
     <!-- Custom Order Section -->
     <section class="container mx-auto px-4 py-16">
@@ -143,19 +150,41 @@
         </div>
     </section>
 
-    <!-- Footer (same as index.html) -->
-    <footer class="bg-black text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <div class="flex justify-center space-x-4 mb-4">
-                <a href="https://wa.me/9072270271" target="_blank" class="hover:text-green-500">WhatsApp</a>
-                <a href="https://instagram.com/odux.art" target="_blank" class="hover:text-pink-500">Instagram</a>
+    <!-- Footer -->
+    <footer class="bg-black text-white py-12 mt-16">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-col items-center justify-center">
+                <!-- Logo -->
+                <div class="mb-6">
+                    <img src="https://iili.io/FP5RC4R.png" alt="Odux Art Logo" class="h-16">
+                </div>
+                
+                <!-- Social Links -->
+                <div class="flex space-x-6 mb-6">
+                    <a href="https://wa.me/919072270271" target="_blank" class="text-white hover:text-green-500 transition-colors">
+                        <span class="sr-only">WhatsApp</span>
+                        <i class="fab fa-whatsapp text-2xl"></i>
+                    </a>
+                    <a href="https://instagram.com/odux.art" target="_blank" class="text-white hover:text-pink-500 transition-colors">
+                        <span class="sr-only">Instagram</span>
+                        <i class="fab fa-instagram text-2xl"></i>
+                    </a>
+                </div>
+                
+                <!-- Copyright -->
+                <p class="text-gray-400 text-sm">&copy; 2025 Odux Art. All rights reserved.</p>
             </div>
-            <p>&copy; 2025 Odux Art. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script>
+        // Mobile menu toggle
+        document.getElementById('mobile-menu-toggle').addEventListener('click', function() {
+            const menu = document.getElementById('mobile-menu');
+            menu.classList.toggle('hidden');
+        });
+    </script>
     <script>
         document.getElementById('submitOrder').addEventListener('click', function() {
             const name = document.getElementById('customer-name').value;
