--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             </a>
             <div class="space-x-4 hidden md:block">
                 <a href="index.html" class="text-black hover:text-gray-600">Home</a>
-                <a href="products.html" class="text-black hover:text-gray-600">Products</a>
+                <a href="index.html" class="text-black hover:text-gray-600">Products</a>
                 <a href="custom-order.html" class="text-black hover:text-gray-600">Custom Order</a>
                 <a href="contact.html" class="text-black hover:text-gray-600">Contact</a>
             </div>
@@ -32,7 +32,7 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white">
             <div class="px-4 pt-2 pb-3 space-y-1">
                 <a href="index.html" class="block text-black hover:bg-gray-100 py-2">Home</a>
-                <a href="products.html" class="block text-black hover:bg-gray-100 py-2">Products</a>
+                <a href="index.html" class="block text-black hover:bg-gray-100 py-2">Products</a>
                 <a href="custom-order.html" class="block text-black hover:bg-gray-100 py-2">Custom Order</a>
                 <a href="contact.html" class="block text-black hover:bg-gray-100 py-2">Contact</a>
             </div>
