--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
         <!-- Dummy Product Cards -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://iili.io/FPaWvcB.jpg" alt="momemto" class="w-full h-64 object-cover" />
+          <img src="https://iili.io/FPQks7s.jpg" alt="momemto" class="w-full h-64 object-cover" />
           <div class="p-4">
-            <h3 class="text-xl font-semibold mb-2">Bussiness Momento</h3>
+            <h3 class="text-xl font-semibold mb-2">Personalized Momento</h3>
             <p class="text-gray-600">Made on wood with glass</p>
           </div>
         </div>
