--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
           </div>
         </div>
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://iili.io/FPaW88P.jpg" alt="Wooden Frame" class="w-full h-64 object-cover" />
+          <img src="https://iili.io/FPQmQyv.jpg" alt="Wooden Frame" class="w-full h-64 object-cover" />
           <div class="p-4">
             <h3 class="text-xl font-semibold mb-2">Wooden Frame</h3>
             <p class="text-gray-600">Custom frame for Pic</p>
           </div>
         </div>
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://iili.io/FPaWPoJ.jpg" alt="Curicuts" class="w-full h-64 object-cover" />
+          <img src="https://iili.io/FPQPVLb.jpg" alt="Curicuts" class="w-full h-64 object-cover" />
           <div class="p-4">
             <h3 class="text-xl font-semibold mb-2">Curicuts</h3>
             <p class="text-gray-600">High quality tiny gift</p>
