--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odux Art - Turn Your Moments into Timeless Art</title>
+    <title>Odux - Turn Your Moments into Timeless Art</title>
     <link rel="icon" type="image/png" href="https://iili.io/FP5Ro2p.png">
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
