--- a/contact.html
+++ b/contact.html
@@ -11,33 +11,47 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body class="bg-white text-black">
-    <!-- Navbar (same as index.html) -->
-    <nav class="bg-white shadow-sm">
-        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <a href="index.html" class="flex items-center">
-                <img src="https://iili.io/FP5RC4R.png" alt="Odux Art Logo" class="h-10">
-            </a>
-            <div class="space-x-4 hidden md:block">
-                <a href="index.html" class="text-black hover:text-gray-600">Home</a>
-                <a href="index.html" class="text-black hover:text-gray-600">Products</a>
-                <a href="custom-order.html" class="text-black hover:text-gray-600">Custom Order</a>
-                <a href="contact.html" class="text-black hover:text-gray-600">Contact</a>
-            </div>
-            <button id="mobile-menu-toggle" class="md:hidden">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                </svg>
-            </button>
+        <!-- Navbar -->
+    <nav class="bg-black shadow-sm fixed w-full z-50 top-0">
+      <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+        <a href="index.html" class="flex items-center">
+          <img src="https://iili.io/FP5RC4R.png" alt="Odux Art Logo" class="h-10">
+        </a>
+        <div class="space-x-4 hidden md:block">
+          <a href="index.html" class="text-white hover:text-gray-300 no-underline">Home</a>
+          <a href="index.html" class="text-white hover:text-gray-300 no-underline">Products</a>
+          <a href="custom-order.html" class="text-white hover:text-gray-300 no-underline">Custom Order</a>
+          <a href="contact.html" class="text-white hover:text-gray-300 no-underline">Contact</a>
         </div>
-        <div id="mobile-menu" class="hidden md:hidden bg-white">
-            <div class="px-4 pt-2 pb-3 space-y-1">
-                <a href="index.html" class="block text-black hover:bg-gray-100 py-2">Home</a>
-                <a href="index.html" class="block text-black hover:bg-gray-100 py-2">Products</a>
-                <a href="custom-order.html" class="block text-black hover:bg-gray-100 py-2">Custom Order</a>
-                <a href="contact.html" class="block text-black hover:bg-gray-100 py-2">Contact</a>
-            </div>
+        <button id="mobile-menu-toggle" class="md:hidden text-white">
+          <svg
+            class="w-6 h-6"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            ></path>
+          </svg>
+        </button>
+      </div>
+      <div id="mobile-menu" class="hidden md:hidden bg-black">
+        <div class="px-4 pt-2 pb-3 space-y-1">
+          <a href="index.html" class="block text-white hover:bg-gray-800 py-2 no-underline">Home</a>
+          <a href="index.html" class="block text-white hover:bg-gray-800 py-2 no-underline">Products</a>
+          <a href="custom-order.html" class="block text-white hover:bg-gray-800 py-2 no-underline">Custom Order</a>
+          <a href="contact.html" class="block text-white hover:bg-gray-800 py-2 no-underline">Contact</a>
         </div>
+      </div>
     </nav>
+
+    <!-- Add margin to push content below the navbar -->
+    <div class="h-16"></div>
 
     <!-- Contact Section -->
     <section class="container mx-auto px-4 py-16">
