--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
           <div class="w-full flex-shrink-0">
             <img src="https://iili.io/FP5RIpt.jpg" alt="Art Studio Interior" class="w-full h-auto max-h-[90vh] object-cover object-top">
           </div>
+          <!-- Slide 3 -->
+          <div class="w-full flex-shrink-0">
+            <img src="https://iili.io/FPD4mhX.jpg" alt="Art Gallery Showcase" class="w-full h-auto max-h-[90vh] object-cover object-top">
+          </div>
         </div>
         
         <!-- Navigation Buttons -->
