--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body class="bg-white text-black">
+    <!-- Loader -->
+    <div class="loader-container">
+      <img src="https://iili.io/FP5RC4R.png" alt="Odux Art Logo" class="loader">
+    </div>
     <!-- Navbar -->
     <nav class="bg-black shadow-sm fixed w-full z-50 top-0">
       <div class="container mx-auto px-4 py-3 flex justify-between items-center">
