--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <link href="styles.css" rel="stylesheet" />
+    <link href="loader.css" rel="stylesheet" />
   </head>
   <body class="bg-white text-black">
     <!-- Loader -->
