--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Add margin to push content below the navbar -->
     <div class="h-16"></div>
 
-      <!-- Hero Banner - Consolidated Slider -->
+    <!-- Hero Banner - Consolidated Slider -->
     <div class="relative">
       <div id="main-slider" class="relative w-full">
         <!-- Slide 1 -->
@@ -102,6 +102,13 @@
         <span class="dot w-2 h-2 rounded-full bg-white/50 cursor-pointer"></span>
       </div>
     </div>
+
+    <!-- Hero Section -->
+    <header class="w-full">
+      <!-- Slider Container - Full width with no padding -->
+      <div class="relative w-full overflow-hidden">
+        <!-- Removed Slider -->
+      </div>
       
       <!-- Hero Text Overlay -->
       <div class="container mx-auto px-4 py-12 text-center">
